--- a/src/scss/tablet.scss
+++ b/src/scss/tablet.scss
@@ -134,7 +134,7 @@ ul.hk-social {
 
 .hk-central_block {
   margin: 80px 55px 0;
-  height: 100vh;
+  height: calc(100vh - 80px);
 
   > div {
     width: 100%;
@@ -196,6 +196,7 @@ ul.hk-social {
 
   .hk-about-descr {
     max-width: unset;
+    font-size: 18px;
   }
 
   .hk-central_block {
@@ -214,6 +215,8 @@ ul.hk-social {
       background-size: contain;
       height: 850px;
       width: 500px;
+      top: 140px;
+      transform: translate(-50%, 0px);
 
       .hk-timeline-line-1,
       .hk-timeline-line-2,
@@ -359,8 +362,215 @@ ul.hk-social {
     }
   }
 }
-//TODO remove when commit
 
+.hk-milestones {
+  .hk-central_block {
+    > div {
+      margin-top: 40px;
+    }
+
+    .absolute-center {
+      width: calc(100% - 110px);
+      top: 130px;
+      transform: translate(-50%, 0%);
+      height: calc(100% - 130px);
+
+      .hk-milestones-block_headers {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+
+        > div+div {
+          margin-left: 0;
+        }
+
+        .hk-milestones-block_header-1 {
+          display: block;
+          width: 100%;
+
+          h4 {
+            display: inline-block;
+            width: 50%;
+          }
+
+          hr {
+            display: none;
+          }
+
+          p {
+            display: inline-block;
+            font-size: 20px;
+          }
+        }
+
+        .hk-milestones-block_header-2 {
+          display: block;
+          width: 100%;
+          margin-top: 20px;
+
+          h4 {
+            display: inline-block;
+            width: 50%;
+          }
+
+          hr {
+            display: none;
+          }
+
+          p {
+            display: inline-block;
+            font-size: 20px;
+          }
+        }
+
+        .hk-milestones-block_header-3 {
+          display: block;
+          width: 100%;
+          margin-top: 70px;
+
+          h4 {
+            display: inline-block;
+            width: 50%;
+          }
+
+          hr {
+            display: none;
+          }
+
+          p {
+            display: inline-block;
+            font-size: 20px;
+          }
+        }
+
+        .hk-milestones-block_header-4 {
+          display: block;
+          width: 100%;
+          margin-top: 70px;
+
+          h4 {
+            display: inline-block;
+            width: 50%;
+          }
+
+          hr {
+            display: none;
+          }
+
+          p {
+            display: inline-block;
+            font-size: 20px;
+          }
+        }
+
+        .hk-milestones-block_header-5 {
+          display: block;
+          width: 100%;
+          margin-top: 115px;
+
+          h4 {
+            display: inline-block;
+            width: 50%;
+          }
+
+          hr {
+            display: none;
+          }
+
+          p {
+            display: inline-block;
+            font-size: 20px;
+          }
+        }
+      }
+
+      .hk-milestones-block_cards {
+        width: 100%;
+        height: 100%;
+        position: relative;
+
+        > div+div {
+          margin-left: 0;
+        }
+
+        .hk-milestones-block {
+          position: absolute;
+          width: 100%;
+
+          p {
+            font-size: 20px;
+          }
+        }
+
+        .hk-block-1 {
+          height: 64px;
+          top: 60px;
+        }
+
+        .hk-block-2 {
+          height: 112px;
+          top: 165px;
+        }
+
+        .hk-block-3 {
+          height: 112px;
+          top: 324px;
+        }
+
+        .hk-block-4 {
+          height: 160px;
+          top: 480px;
+        }
+
+        .hk-block-5 {
+          height: 200px;
+          top: 680px;
+        }
+      }
+    }
+  }
+}
+
+.hk-token_sale {
+  .hk-token_sale-figure {
+    height: 500px;
+    width: 100%;
+    margin: auto;
+    background: url("../img/hk-token_sale_tablet.png");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: contain;
+    margin-top: 60px;
+    position: relative;
+  }
+}
+
+.hk-burning {
+  h2 {
+    margin-top: 0;
+  }
+
+  p {
+    width: 100%;
+    float: none;
+    padding-left: 40px;
+    box-sizing: border-box;
+  }
+
+  .hk-burning-quote_text {
+    margin-top: 0;
+  }
+
+  .hk-burning-descr {
+    max-width: unset;
+    font-size: 18px;
+  }
+
+  .hk-central_block {
+    align-items: start;
+  }
+}
+//TODO remove when commit
 .hk-navigation {
   display: none;
 }
