--- a/src/scss/tablet.scss
+++ b/src/scss/tablet.scss
@@ -12,20 +12,29 @@
   height: 60px;
   padding-bottom: 21px;
   background: #282828;
-}
 
-.hk-logo {
-  left: 55px;
-  top: 20px;
-  position: absolute;
-}
+  .hk-logo {
+    left: 55px;
+    top: 20px;
+    position: absolute;
+  }
 
-.hk-subscribe {
-  margin-top: 40px;
-}
+  .hk-subscribe {
+    margin-top: 30px;
 
-#hk-language-select {
-  margin-top: 40px;
+    .hk-subscribe-icon {
+      font-size: 20px;
+    }
+
+    .hk-subscribe-link {
+      font-size: 20px;
+    }
+  }
+
+  #hk-language-select {
+    margin-top: 30px;
+    font-size: 20px;
+  }
 }
 
 #hk-tablet_menu {
