slider team fixed, 1 for tablet/mobile, 3 for desktop

--- a/src/scss/tablet.scss
+++ b/src/scss/tablet.scss
@@ -13,7 +13,7 @@
   .main-modal-content {
     width: 70%;
     height: 40%;
-}
+  }
 }
 
 .advisor-modal-container {
@@ -694,10 +694,86 @@ ul.hk-social {
   }
 }
 
+.hk-team {
+  .hk-central_block {
+    .not-relative {
+      display: block;
+      margin-left: 0;
+      position: relative !important;
 
+      .block-title-with-pagination {
+        display: block;
 
+        h2 {
+          margin-bottom: 40px;
+          margin-top: 0;
 
+          > br {
+            display: none;
+          }
+        }
 
+        .slider-pagination {
+          position: absolute;
+          top: 650px;
+          width: 50%;
+          max-width: 350px;
+          box-sizing: border-box;
+          justify-content: space-between;
+        }
+      }
+
+      .team-slider {
+        font-size: 16px;
+
+        .team-image {
+          max-width: 350px;
+          width: 50%;
+          height: auto;
+        }
+
+        .swiper-container {
+          width: 100%;
+
+          .name {
+            display: block;
+            position: absolute;
+            left: 50%;
+            top: 0;
+            width: 50%;
+            padding-left: 30px;
+            box-sizing: border-box;
+            margin-top: 0;
+            font-size: 22px;
+          }
+
+          .work {
+            display: block;
+            position: absolute;
+            left: 50%;
+            top: 35px;
+            width: 50%;
+            padding-left: 30px;
+            box-sizing: border-box;
+            font-size: 20px;
+          }
+
+          .member-description,
+          .member-description-last {
+            display: block;
+            position: absolute;
+            left: 50%;
+            top: 70px;
+            width: 50%;
+            padding-left: 30px;
+            box-sizing: border-box;
+            font-size: 18px;
+          }
+        }
+      }
+    }
+  }
+}
 //TODO remove when commit
 
 .hk-navigation {
