--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1259,6 +1259,10 @@ p.hk-burning-descr {
   background-image: url(./../img/timeline-bg.png);
 }
 
+.hk-timeline-figure-mobile {
+  display: none;
+}
+
 .hk-burning {
   background-image: url(./../img/timeline-bg.png);
 }
