--- a/src/scss/tablet.scss
+++ b/src/scss/tablet.scss
@@ -876,21 +876,28 @@ ul.hk-social {
 
         .slider-pagination {
           position: absolute;
-          top: 650px;
+          top: 670px;
           width: 50%;
           max-width: 350px;
+          left: 50%;
           box-sizing: border-box;
           justify-content: space-between;
+          padding-left: 30px;
         }
       }
 
       .team-slider {
         font-size: 16px;
+        max-width: 800px;
+        margin: auto;
+        padding-left: 0;
 
-        .team-image {
+        .team-image,
+        .team-image-active {
           max-width: 350px;
           width: 50%;
           height: auto;
+          right: 0;
         }
 
         .swiper-container {
@@ -936,8 +943,60 @@ ul.hk-social {
   }
 }
 
-//TODO remove when commit
+.hk-partners {
 
+  .hk-central_block>div {
+    margin-left: 0;
+  }
+  .block-title-with-pagination.advisors {
+    h2 {
+      max-width: 60%;
+    }
+
+    .slider-pagination {
+      margin-top: 90px;
+    }
+  }
+
+  .advisors-slider {
+    .swiper-wrapper {
+      margin-top: 30px;
+      height: 250px;
+
+      .name {
+        display: block;
+        position: absolute;
+        left: 100px;
+        top: 0;
+        width: 50%;
+        padding-left: 30px;
+        box-sizing: border-box;
+        margin-top: 0;
+      }
+
+      .member-description {
+        display: block;
+        position: absolute;
+        left: 100px;
+        top: 40px;
+        width: 50%;
+        padding-left: 30px;
+        box-sizing: border-box;
+      }
+    }
+  }
+
+  .partners-slider {
+    .swiper-wrapper {
+      margin-top: 0;
+      .swiper-slide {
+        display: block;
+        margin: 0 auto;
+      }
+    }
+  }
+}
+//TODO remove when commit
 .hk-navigation {
   display: none;
 }
