--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -581,6 +581,45 @@ body {
     }
   }
 
+  .hk-bounty {
+    min-height: 100%;
+
+    .hk-central_block {
+      height: 100%;
+      min-height: 100%;
+      margin: 0;
+      padding: 0 30px 50px;
+
+      h2 {
+        font-size: 26px;
+      }
+
+      hr {
+        margin-bottom: 22px;
+      }
+
+      .hk-bounty-quote_text {
+        font-size: 22px;
+        line-height: 32px;
+      }
+
+      .hk-bounty-panes_container {
+        float: none;
+
+        .hk-bounty-pane {
+          width: 50%;
+          .hk-bounty_diagramm {
+            height: 140px;
+            width: 140px;
+          }
+          h6 {
+            font-size: 18px;
+          }
+        }
+      }
+    }
+  }
+
   .hk-burning {
     min-height: 100%;
 
