--- a/src/scss/mobile.scss
+++ b/src/scss/mobile.scss
@@ -311,7 +311,7 @@ body {
         margin: 0;
 
         h1 {
-          font-size: 36px;
+          font-size: 32px;
           padding-left: 15px;
           margin-bottom: 30px;
         }
@@ -688,7 +688,8 @@ body {
                 font-size: 20px;
               }
 
-              .member-description, .member-description-last {
+              .member-description,
+              .member-description-last {
                 display: block;
                 position: relative;
                 left: 0;
@@ -701,6 +702,75 @@ body {
             }
           }
         }
+      }
+    }
+  }
+
+  .hk-partners {
+    min-height: 100%;
+
+    .hk-central_block {
+      height: 100%;
+      padding: 0;
+      margin: 0;
+
+      .block-title-with-pagination {
+        padding-right: 0;
+        display: block;
+        padding-top: 0;
+
+        h2 {
+          max-width: 100%;
+          width: 100%;
+          margin: 30px 0;
+          padding: 0 30px;
+          box-sizing: border-box;
+        }
+
+        .slider-pagination {
+          margin-top: 30px;
+          justify-content: center;
+          z-index: 3;
+
+          .advisors {
+            z-index: 3;
+          }
+
+          .partners {
+            z-index: 3;
+          }
+        }
+      }
+
+      .advisors-slider {
+        .swiper-wrapper {
+          margin: 30px auto;
+          height: 200px;
+          width: 300px;
+
+          .name {
+            width: 200px;
+          }
+
+          .member-description {
+            width: 200px;
+          }
+        }
+      }
+
+      .partners-slider {
+        .swiper-wrapper {
+          max-width: 300px;
+          margin: auto;
+
+          img {
+            width: 100%;
+          }
+        }
+      }
+
+      .hk-header-last {
+        padding: 0 15px 10px;
       }
     }
   }
